--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_CONNECTION_STRING=mysql+mysqlconnector://root@localhost/example
+DATABASE_URL=postgresql://Ibrahim:Ibrahim159753@localhost:5432/todos
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/main.py
 FLASK_ENV=development
